# plycpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
hdr/: plycpp.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/plycpp/share/plycpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/plycpp/share/plycpp/cmake/: ament_cmake_export_libraries-extras.cmake
log/: latest_build
models/: bunny.ply
src/: README.md  example.cpp  plycpp.cpp
src/models/: bunny_ascii.ply
src/plycpp/: CMakeLists.txt
src/plycpp/include/plycpp/: plycpp.h
src/plycpp/src/: example.cpp  plycpp.cpp
